--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "node src/generate-sitemap.js && cp public/sitemap.xml build/sitemap.xml"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +36,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "fs": "^0.0.1-security",
+    "generate-sitemap": "^1.0.7",
+    "path": "^0.12.7",
+    "sitemap": "^8.0.0"
   }
 }
