--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "node src/generate-sitemap.js && cp public/sitemap.xml build/sitemap.xml"
+    "postbuild": "node src/generate-sitemap.js"
   },
   "eslintConfig": {
     "extends": [
